<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MagicNetworkExplorer</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="main_ipaddress_title">Your IP Address</string>
    <string name="main_ipaddress_error">Can\'t get your IP address?</string>
    
    <string name="main_scanner_status_title">Network Scanner Status</string>
    <string name="main_scanner_status_idle">Idle</string>
    <string name="main_scanner_status_scanning">Scanning</string>
    <string name="main_scanner_status_wifierror">Can\'t scan as you\'re not connected to a WiFi network?</string>
    <string name="main_scanner_toast_noresults">No devices found on your network</string>
    <string name="main_scanner_found_title">Network Devices</string>
    
    <string name="scanner_list_icon_desc">Scanner list icon</string>

</resources>
